# gst-somaeventsource

./: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  libtool  testsetup.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
m4/: Makefile  Makefile.in
m4/CVS/: Repository
m4/CVS/.svn/: all-wcprops  entries
m4/CVS/.svn/text-base/: Root.svn-base
src/: Makefile  Makefile.am  Makefile.in  gstsomaeventsource.c  gstsomaeventsource.h  libsomaeventsource_la-gstsomaeventsource.loT  notes.txt
src/.deps/: libgstplugin_la-gstplugin.Plo  libsomaeventsource_la-gstplugin.Plo
src/.deps/.svn/: all-wcprops  entries
src/.deps/.svn/text-base/: libsomaeventsource_la-gstsomaeventsource.Plo.svn-base
tests/: elementtest.py  simpleaudiotest.py
